<resources>
    <string name="app_name" translatable="false">Security Manager</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="staff_id">Enter Staff ID</string>
    <string name="staff_contact">Enter Mobile Number</string>
    <string name="title_activity_staff__main" translatable="false">Staff_Main</string>
    <string name="action_settings">Settings</string>
    <string name="section_format" translatable="false">Hello World from section: %1$d</string>
    <string name="uploadImages">Set your image</string>
    <string name="url" translatable="false">http://way2society.com:8080/NewSecurityManagerWeb/</string>
    <string name="imageurl" translatable="false">https://way2society.com/</string>
    <string name="button_exit_kiosk_mode_text" translatable="false">Exit kiosk mode</string>
    <string name="not_in_kiosk_mode" translatable="false">Not in kiosk mode already</string>
    <string name="gate_no_1">Gate No : 1</string>
    <string name="note">Note</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="visitor_entry">Visitor Entry</string>
    <string name="visitor_exit">Visitor Exit</string>
    <string name="staff_entry">Staff Entry</string>
    <string name="staff_exit">Staff Exit</string>
    <string name="checkpost_round">Security Round</string>
    <string name="emergency">Emergency</string>
    <string name="expected_visitor">Expected Visitor</string>
    <string name="notice_board">Notice Board</string>
    <string name="news_heading">News Heading:</string>
    <string name="search_by_name">Search By Name…</string>
    <string name="settings">SETTINGS</string>
    <string name="entry_with">Entry With :</string>
    <string name="fetch">FETCH</string>
    <string name="enter_number">Enter Number *</string>
    <string name="owner_name">Owner Name :</string>
    <string name="wing">Wing :</string>
    <string name="name">Name :</string>
    <string name="purpose">Purpose :</string>
    <string name="company_name">Company Name :</string>
    <string name="vehicle_no">Vehicle No :</string>
    <string name="in_date">In Date :</string>
    <string name="in_time">In Time :</string>
    <string name="entry_gate_no">Entry Gate No. :</string>
    <string name="out_date">Out Date :</string>
    <string name="out_time">Out Time :</string>
    <string name="exit_gate_no">Exit Gate No. :</string>
    <string name="change_gate">Change Gate</string>
    <string name="go_to_dashboard">GO TO DASHBOARD</string>
    <string name="latest_five">Latest Five</string>
    <string name="visit_report">Visit Report</string>
    <string name="flat_visited">Flat Visited</string>
    <string name="date">Date</string>
    <string name="in_gate">In (Gate)</string>
    <string name="out_gate">Out (Gate)</string>
    <string name="fetch_report">FETCH REPORT</string>
    <string name="job_profile">Job Profile:</string>
    <string name="contact_no">Contact No. :</string>
    <string name="entry_date">Entry Date :</string>
    <string name="entry_time">Entry Time :</string>
    <string name="entry_gate">Entry Gate No :</string>
    <string name="notee">Note :</string>
    <string name="s_taff_id">Staff ID :</string>
    <string name="view_latest_history">VIEW LATEST HISTORY</string>
    <string name="check_out">Check Out</string>
    <string name="status">Status</string>
    <string name="intime">In Time</string>
    <string name="outtime">Out Time</string>
    <string name="date_of_birth">Date Of Birth :</string>
    <string name="category">Category :</string>
    <string name="working_since">Working Since :</string>
    <string name="rating">Rating :</string>
    <string name="working_in_units">Working in Units :</string>
    <string name="all_report">All Report</string>
    <string name="in">In</string>
    <string name="out">Out</string>
    <string name="total_staff">Total Staff</string>
    <string name="nam">Name</string>
    <string name="profile">Profile</string>
    <string name="gate">Gate</string>
    <string name="fingerprint">FingerPrint</string>
    <string name="id_or_mobile">ID Or Mobile</string>
    <string name="select_image">SELECT IMAGE</string>
    <string name="check_in">CHECK IN</string>
    <string name="set_gate_number">Set gate number:</string>
    <string name="set">Set</string>
    <string name="select_your_language">Select your Language:</string>
    <string name="sync_staff_fingerprint_data_with_server">Sync staff fingerprint data with server</string>
    <string name="sync">SYNC</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="mobile_no">Mobile No:</string>
    <string name="expected_date">Expected Date:</string>
    <string name="expected_time">Expected Time:</string>
    <string name="unit_no">Unit No:</string>
    <string name="at_res" translatable="false">At res</string>
    <string name="gateno">Gate No -</string>
    <string name="or">OR</string>
    <string name="search">SEARCH</string>
    <string name="verify">VERIFY</string>
    <string name="clear">Clear</string>
    <string name="register_staff_fingerprint">Register Staff Fingerprint</string>
    <string name="register_new_staff">Register new Staff</string>
    <string name="flat_unit_no">Flat/Unit No. :</string>
    <string name="check_out_description">Check Out Description:</string>
    <string name="flat_unit_to_visit">Flat/Unit to visit :</string>
    <string name="visiting">Visiting :</string>
    <string name="statu">Status:</string>
    <string name="add_new_staff">Add New Staff</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="update_old_entry">Update Old Entry:</string>
    <string name="fetch_details">Fetch Details</string>
    <string name="personal_details">Personal Details</string>
    <string name="gender">Gender:</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="marrital_status">Marrital Status :</string>
    <string name="married">Married</string>
    <string name="unmarried">UnMarried</string>
    <string name="select_category">Select Category :</string>
    <string name="assign_more_categories">Assign More Categories</string>
    <string name="take_picture">TAKE PICTURE</string>
    <string name="save_and_next">Save And Next</string>
    <string name="current_addess">Current Addess *</string>
    <string name="reference_address">Reference Address</string>
    <string name="document_and_wing_selection">Document And Wing Selection</string>
    <string name="upload_document">Upload Document</string>
    <string name="upload">UPLOAD</string>
    <string name="add_more_document">Add More Document</string>
    <string name="remove_document">Remove Document</string>
    <string name="service_provider_working_in_following_units">Service provider working in following units</string>
    <string name="add_more">Add More</string>
    <string name="approved">Approved</string>
    <string name="without_approval">Without Approval</string>
    <string name="denied">Denied</string>
    <string name="approved_with_message">Approved With Message :</string>
    <string name="remove_unit">Remove Unit</string>
    <string name="contact_details">Contact Details</string>
    <string name="reference_contact_no">Reference Contact No. :</string>
    <string name="home">Home</string>
    <string name="expected_visitor_of">EXPECTED VISITOR OF</string>
    <string name="wing_unit_no">Wing/Unit No</string>
    <string name="visitor_already_checked_in">Visitor Already Checked In</string>
    <string name="enter_new_visitor_details">Enter New Visitor Details</string>
    <string name="latest_visit_report">Latest Visit Report</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify_otp">VERIFY OTP</string>
    <string name="add_company">Add Company :</string>
    <string name="next">Next</string>
    <string name="poor" translatable="false">Poor</string>
    <string name="average" translatable="false">Average</string>
    <string name="good" translatable="false">Good</string>
    <string name="still_inside">Still Inside</string>
    <string name="very_good" translatable="false">Very Good</string>
    <string name="excellent" translatable="false">Excellent</string>
    <string name="sos">SOS Alert</string>
    <string name="new_staff_entry">New Staff Entry</string>
    <string name="uploaded">UPLOADED</string>
    <string name="select_document_type" translatable="false">Select Document Type</string>
    <string name="select_wing">Select Wing</string>
    <string name="please_select_wing">Please Select Wing</string>
    <string name="select_unit">Select Unit</string>
    <string name="please_select_unit">Please Select Unit</string>
    <string name="field_cannot_be_empty">Field Cannot be Empty</string>
    <string name="please_select_category">Please Select Category</string>
    <string name="entered_mobile_incorrect">Entered Mobile No. is incorrect</string>
    <string name="last_added_staff_id">Last Added Staff Id :</string>
    <string name="wing_selection">Wing Selection</string>
    <string name="loading">Loading</string>
    <string name="loading_please_wait">Loading. Please wait...</string>
    <string name="regiter">Register</string>
    <string name="already_registered">Already Register?</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="to">To</string>
    <string name="hours">Hours</string>
    <string name="no_staff_rec_available">No Staff Record Available</string>
    <string name="staff_details">Staff Details</string>
    <string name="view_all_staff">View All Staff</string>
    <string name="visit_in_unit">Visit In Unit</string>
    <string name="send_for_approval">Send For Approval</string>
    <string name="re_send_for_approval">Re-Send For Approval</string>
    <string name="upload_driving_license">Upload Driving License</string>
    <string name="upload_pan_card">Upload Pan-Card</string>
    <string name="upload_aadhar_card">Upload Aadhar-Card</string>
    <string name="aadhar">Aadhar :</string>
    <string name="pancard">PanCard ID :</string>
    <string name="dl">DL :</string>
    <string name="other">Other :</string>
    <string name="select_entry_with">Select Entry With</string>
    <string name="mobile">Mobile Number</string>
    <string name="aadhar_number">Aadhar-Card Number</string>
    <string name="pan_card_no">Pan Card Number</string>
    <string name="driving_license_number">Driving License Number</string>
    <string name="select_company">Select Company</string>
    <string name="please_select_entry_with">Please Select Entry With</string>
    <string name="extract_purpose">Select Purpose</string>
    <string name="pleas_select_purpose">Please Select Purpose</string>
    <string name="please_select_company">Please Select Company</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="please_select_purpose">Please Select Purpose</string>
    <string name="verified">Verified</string>
    <string name="time_limit_exceeded">Time limit Exceeded</string>
    <string name="within_time_limit">Within Time limit</string>
    <string name="visitor_entry_reports">Visitor Entry Reports</string>
    <string name="no_records_available">No Record Available</string>
    <string name="welcome_staff">Welcome Staff</string>
    <string name="welcome_visitor">Welcome Visitor</string>
    <string name="documnet_id">Document ID :</string>
    <string name="staff_view">Staff View</string>
    <string name="driving_license_id">Driving License ID:</string>
    <string name="enter_staff_id">Enter Staff Id*</string>
    <string name="full_name">Full Name *</string>
    <string name="contact_no_2">Contact No -2</string>
    <string name="schedule_nav">Schedule List</string>
</resources>