<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nov_home"
            android:icon="@drawable/exp"
            android:title="@string/home" />
        <item
            android:id="@+id/nov_ventry"
            android:icon="@drawable/visitroentry"
            android:title="@string/visitor_entry" />
        <item
            android:id="@+id/nov_vexit"
            android:icon="@drawable/visitorexit"
            android:title="@string/visitor_exit" />
        <item
            android:id="@+id/nov_staffentry"
            android:icon="@drawable/staffentry"
            android:title="@string/staff_entry" />
        <item
            android:id="@+id/nov_staffexit"
            android:icon="@drawable/staffexit"
            android:title="@string/staff_exit" />

        <item
            android:id="@+id/nov_master"
            android:icon="@drawable/visitroentry"
            android:title="@string/schedule_nav" />
       <!-- <item
            android:id="@+id/nov_vcheck"
            android:icon="@drawable/setting"
            android:title="@string/checkpost_round" />-->
        <!--<item
            android:id="@+id/nov_master"
            android:icon="@drawable/staffexit"
            android:title="check post master" />-->
        <item
            android:id="@+id/nov_addstaff"
            android:icon="@mipmap/staffadd"
            android:title="@string/add_new_staff" />
        <item
            android:id="@+id/nov_news"
            android:icon="@drawable/news"
            android:title="@string/notice_board" />
        <item
            android:id="@+id/nov_about"
            android:icon="@drawable/aboutus"
            android:title="@string/about" />
        <item
            android:id="@+id/nov_setting"
            android:icon="@drawable/setting"
            android:title="@string/action_settings" />

        <item
            android:id="@+id/nov_logout"
            android:icon="@drawable/uot"
            android:title="@string/logout" />
    </group>
</menu>