<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
  >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/staffname"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@color/header"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            android:textColor="#fff" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:id="@+id/linear_radio"
        >


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:id="@+id/radiogroup1"
            >

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:onClick="stafflastest"
                android:text="@string/latest_five"
                android:buttonTint="@color/header" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:onClick="staffreport"
                android:text="@string/all_report"
                android:buttonTint="@color/header" />

        </RadioGroup>

    </LinearLayout>

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/l2"
        android:visibility="invisible"
        ></TableLayout>

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/header"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/textView2"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/header"
            android:gravity="center"
            android:text="@string/status"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/header"
            android:gravity="center"
            android:text="@string/in"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@color/header"
            android:gravity="center"
            android:text="@string/out"
            android:textColor="#fff"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/Nstafflastest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <ListView
            android:id="@+id/stafflatest"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>
    </LinearLayout>
</LinearLayout>