<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addnews">

    <LinearLayout
        android:id="@+id/showGateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ReportColor"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gate_no_1"
            android:textColor="@color/ic_launcher_background"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:id="@+id/titleLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/txtTitle"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/news_heading"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/DescLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/titleLayout"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView20"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_weight="1"
                            android:gravity="left"
                            android:text="@string/note"
                            android:textColor="@color/colorPrimary"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <EditText
                            android:id="@+id/txtDesc"
                            android:layout_width="match_parent"
                            android:layout_height="75dp"
                            android:layout_marginTop="10dp"
                            android:layout_weight="1"
                            android:gravity="top"
                            android:inputType="text|textMultiLine"
                            android:textSize="18sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/DescLayout"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/submit"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:background="@color/ReportColor"
                            android:text="@string/submit"
                            android:textColor="@color/ic_launcher_background"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/cancle"
                            android:layout_width="140dp"
                            android:layout_height="wrap_content"
                            android:background="@color/ReportColor"
                            android:text="@string/cancel"
                            android:textColor="@color/ic_launcher_background"
                            android:textStyle="bold" />
                    </LinearLayout>
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>