<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="10dp">

    <LinearLayout
        android:id="@+id/l1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtunit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:paddingBottom="5dp"
            android:text="@string/flat_unit_no"
            android:textColor="@color/tintchange"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/unitnoitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingRight="5dp"
            android:textColor="@color/tintchange"

            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/l1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtowner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:text="@string/owner_name"
            android:textColor="@color/tintchange"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/ownernameitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"

            android:paddingRight="5dp"

            android:textColor="@color/tintchange"
            android:textSize="18sp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/checkoutdesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/l2"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Tcheckoutdesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="15dp"
            android:text="@string/check_out_description"
            android:textColor="@color/tintchange"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/Vcheckoutdescitem"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:gravity="right"
            android:paddingLeft="15dp"
            android:textColor="@color/header"
            android:textSize="18sp" />


    </LinearLayout>

</RelativeLayout>
